Some dummy data

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,15 @@
+<div class="row marketing">
+  <div id="contentContainerLeft">
+    <div id="nowPlayingTitle">
+      {{episode.podcast}} &#35;{{episode.number}}
+    </div>
+    <div id="nowPlayingSubTitle">
+      {{episode.title}}
+    </div>
+  </div>
+</div>
+
+<!--
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
@@ -21,3 +33,4 @@
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
 </div>
+-->
