--- a/resplendent-inferno-6819/prototype/css/custom.css
+++ b/resplendent-inferno-6819/prototype/css/custom.css
@@ -1,2 +1,2 @@
-body { padding-bottom: 70px;}
-audio { width: *; display: block; }
+body { padding-bottom: 100px;}
+audio { width: 480px; display: block; }
