--- a/resplendent-inferno-6819/prototype/css/YCPrototype.css
+++ b/resplendent-inferno-6819/prototype/css/YCPrototype.css
@@ -1,2 +1,2 @@
-body { padding-bottom: 100px;}
+body { padding-bottom: 150px; margin-bottom: 100px;}
 audio { width: *; display: block; float:left; }
