--- a/resplendent-inferno-6819/prototype/css/YCPrototype.css
+++ b/resplendent-inferno-6819/prototype/css/YCPrototype.css
@@ -1,2 +1,3 @@
-body { padding-top: 50px; padding-bottom: 150px; margin-bottom: 100px;}
+body { padding-top: 20px; padding-bottom: 150px; margin-bottom: 150px;}
 audio { width: *; display: block; float:left; }
+section {padding-top:20px;}
