temporarily reverting to old DB structure and hiding Bennett's work while I learn the concepts necessary to maintain / extend his code.

--- a/episode-editor/app/partials/episodes.html
+++ b/episode-editor/app/partials/episodes.html
@@ -1,7 +1,10 @@
+<!--comment: --> 
 <div data-state='loading'>
   <h2>Loading Episodes...</h2>
 </div>
 
+
+<!--comment: --> 
 <div data-state='list' class="panel panel-default">
   <div class="panel-heading">
     <h2>Episodes</h2>
@@ -17,6 +20,7 @@
   <a href='#' id='new-post-link'>New Post</a>
 </div>
 
+<!--comment: --> 
 <div data-state='collapsed' class='panel panel-default'>
   <div class="panel-heading">
     <h3>{{podcast.title}} > {{currentEpisode.number}}. {{currentEpisode.title}}</h3>
@@ -24,6 +28,7 @@
   <a href='#' id='expand-episode-list'>expand</a>
 </div>
 
+<!--comment: --> 
 <div data-state='new' class="panel panel-default">
   <div class="panel-heading">
     <h2>New Episode</h2>
@@ -42,4 +47,5 @@
   </form>
 </div>
 
+<!--comment: --> 
 <span data-state='hidden'></span>
