created platform page
created a platform page which hold the same code as the embed page + a
header

also update the css to style the header

--- a/episode-editor/app/styles/main.scss
+++ b/episode-editor/app/styles/main.scss
@@ -4,6 +4,31 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+/* Podcast Info Title */
+
+#podcasterInfo_social
+{
+  text-align: right;
+  padding-top: 10px; 
+}
+
+#podcasterInfo_title{
+  /*color: #4f4d4d;*/
+  padding: 0px;
+  margin: 0px; 
+  font-size: 25px; 
+  font-weight: 500;
+}
+
+
+#rowly hr
+{
+  background-color: red;
+  padding: 0px; 
+  margin: 5px; 
+}
+
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
